--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 
 <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.css"/>
+
+<link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.mini.css"/>
   </head>
   
   <body>
