--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.css"/>
 
-<link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.mini.css"/>
+<link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.min.css"/>
   </head>
   
   <body>
