--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
 
     $('#calendar').evoCalendar({
 
-        settingName: settingValue
+        'theme': 'Orange Coral'
 
     })
 
