--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<html ⚡="">
+<html ⚡ lang="en-us">
   <head>
     <meta charset="utf-8" />
     <title>The Recipe Blog</title>
