--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!doctype html>
 <html ⚡ lang="en-us">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PZZ1G2WLT6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-PZZ1G2WLT6');
-</script>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="https://rakshak53.github.io">
@@ -212,9 +204,9 @@ font-weight:bold;
     <script type="application/json">
     {
       "vars" : {
-        "gtag_id": "UA-XXXXX-Y",
+        "gtag_id": "G-PZZ1G2WLT6",
         "config" : {
-          "UA-XXXXX-Y": {
+          "G-PZZ1G2WLT6": {
             "groups": "default"
           }
         }
