--- a/aa-post-template.html
+++ b/aa-post-template.html
@@ -302,30 +302,9 @@ margin:3px;
 
 
 
-<style>
-.related {
-      background-color: #f5f5f5;
-      margin: 16px 16px;
-      display: block;
-      color: #111;
-      height: 75px;
-      padding: 0;
-    }
-    .related > span {
-      font-size: 16px;
-      line-height: 75px;
-      font-weight: 400;
-      vertical-align: top;
-      margin: 8px;
-    }
-    .related:hover {
-      background-color: #ccc;
-    }
-</style>
-
 <div>
 
-<amp-list width="auto" height="200" layout="responsive" src="https://marathibana.online/amp-list-urls.json" binding="no">
+<amp-list width="auto" height="auto" layout="responsive" src="https://marathibana.online/amp-list-urls.json" binding="no">
 
 
 
