--- a/sesame-chutney-recipe-in-marathi.html
+++ b/sesame-chutney-recipe-in-marathi.html
@@ -141,7 +141,7 @@ align-items:center;
 text-align:center;
 color:#999999;
 }
-.footer-link {
+.footer-link{
 text-decoration:none;
 color:#999999;
 margin:10px;
@@ -358,10 +358,9 @@ sesame chutney recipe in marathi</title>
     amp-next-page separator
   </div>
 
-</br>
 
-<footer class="footer1">
-
+<div footer>
+<div class="footer1">
 <div>
 <a class="footer-link" href="https://marathibana.online/post/p/about-us.html">ABOUT US</a>
 <a class="footer-link" href="https://marathibana.online/disclaimer.html">DISCLAIMER</a>
@@ -371,12 +370,12 @@ sesame chutney recipe in marathi</title>
 
 
 </div>
-<br/>
+
 <div> this blog is created for learning of my own HTML and CSS. </div>
-
+<br/>
 <p>copyright 2022</p>
-
-</footer>
+</div>
+</div>
 </amp-next-page>
 
   </body>
