--- a/pets-completed.html
+++ b/pets-completed.html
@@ -60,8 +60,8 @@
   <body>
     <!-- Cover page -->
     <amp-story standalone
-        title="Joy of Pets"
-        publisher="AMP tutorials"
+        title="Joy of Nature"
+        publisher="MARATHIBANA"
         publisher-logo-src="assets/AMP-Brand-White-Icon.svg"
         poster-portrait-src="https://marathibana.online/assets/sea.jpg">
       <amp-story-page id="cover">
@@ -72,20 +72,20 @@
           </amp-img>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical">
-          <h1>The Joy of Pets</h1>
-          <p>By AMP Tutorials</p>
+          <h1>The Joy of Nature and Sea</h1>
+          <p>Location Kokan</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
       <!-- Page 1 (Cat): 1 layer (vertical) -->
       <amp-story-page id="page1">
-        <amp-story-grid-layer template="vertical">
-          <h1>Cats</h1>
+        <amp-story-grid-layer template="fill">
+          <h1>Sea at Dighi</h1>
           <amp-img src="https://marathibana.online/assets/sea2.jpg"
               width="720" height="1280"
               layout="responsive">
           </amp-img>
-          <q>Dogs come when they're called. Cats take a message and get back to you. --Mary Bly</q>
+          <q>This scene taken from dighi Maharashtra</q>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -124,7 +124,7 @@
         <amp-story-grid-layer template="fill">
           <amp-video autoplay loop
                 width="720" height="1280"
-                poster="assets/rabbit.jpg"
+                poster="https://marathibana.online/assets/sea.jpg"
                 layout="responsive">
               <source src="assets/rabbit.mp4" type="video/mp4">
           </amp-video>
@@ -141,25 +141,25 @@
       <amp-story-page id="page5">
         <amp-story-grid-layer template="vertical" class="noedge">
           <div class="wrapper">
-            <amp-img src="assets/cat.jpg"
+            <amp-img src="https://marathibana.online/assets/sea2.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
                 animate-in-delay="0.4s">
             </amp-img>
-            <amp-img src="assets/dog.jpg"
+            <amp-img src="https://marathibana.online/assets/sea.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
                 animate-in-delay="0.6s">
             </amp-img>
-            <amp-img src="assets/bird.jpg"
+            <amp-img src="https://marathibana.online/assets/sea3.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
                 animate-in-delay=".8s">
             </amp-img>
-            <amp-img src="assets/rabbit.jpg"
+            <amp-img src="https://marathibana.online/assets/sea1.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
