--- a/stories/nature-of-kokan.html
+++ b/stories/nature-of-kokan.html
@@ -8,6 +8,7 @@
       custom-element="amp-story"
       src="https://cdn.ampproject.org/v0/amp-story-1.0.js"
     ></script>
+<script async custom-element="amp-story-auto-analytics" src="https://cdn.ampproject.org/v0/amp-story-auto-analytics-0.1.js"></script>
     <title>Nature of kokan</title>
     <link rel="canonical" href="https://marathibana.online/stories/nature-of-kokan.html" />
     <meta
@@ -81,6 +82,8 @@
       publisher-logo-src="https://marathibana.online/assets/logo2.jpg"
       poster-portrait-src="https://marathibana.online/assets/sea.jpg"
     >
+<amp-story-auto-analytics gtag-id="UA-178406997-2"></amp-story-auto-analytics>
+
       <amp-story-page id="my-first-page">
         <amp-story-grid-layer template="fill">
           <amp-img
