--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@ align-items:center;
 text-align:center;
 color:#999999;
 }
+.footer1 p{
+color:#999999;
+}
 .footer-link {
 text-decoration:none;
 color:#999999;
@@ -325,9 +328,9 @@ border-radiusssss:15px;
 
 </div>
 <br/>
-<div> this blog is created for learning of my own HTML and CSS. </div>
+<div> This Blog 'Design' is completely created from scratch & ofcourse this is a static website. I'm still learning HTML and CSS. </div>
 
-<p>copyright 2022</p>
+<p>Copyright 2022</p>
 
 </div>
 
