--- a/amp/how-to-register-yono-sbi-app-guide-in-marathi.html
+++ b/amp/how-to-register-yono-sbi-app-guide-in-marathi.html
@@ -181,6 +181,9 @@ align-items:center;
 text-align:center;
 color:#999999;
 }
+.footer1 p{
+color:#999999;
+}
 .footer-link{
 text-decoration:none;
 color:#999999;
@@ -368,7 +371,7 @@ website :</a>
 
 <div class="tags-container">
 <b>Tags :</b><br/>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html' class="tag">SBI Yono App</a>
+<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App</a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">Yono SBI app guide </a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI app Yono register </a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App registration guide</a>
@@ -456,9 +459,9 @@ website :</a>
 
 </div>
 
-<div> this blog design is completed created from scratch & ofcourse this is a static website. I'm still learning HTML and CSS. </div>
+<div> This Blog 'Design' is completely created from scratch & ofcourse this is a static website. I'm still learning HTML and CSS. </div>
 <br/>
-<p>copyright 2022</p>
+<p>Copyright 2022</p>
 </div>
 </div>
 </amp-next-page>
