--- a/sesame-chutney-recipe-in-marathi.html
+++ b/sesame-chutney-recipe-in-marathi.html
@@ -75,7 +75,8 @@ font-style:italic;
 }
 .headerbar{
 background-color:#fa6732;
-color:white;
+background-color:#3639e3;
+color:#fff;
 }
 
 .home-button {
@@ -107,10 +108,9 @@ font-size:25px;
 }
 #sidebar1{
   align-items: center;
-backgrountd:black;
-background: linear-gradient(to bottom, #662d91 0%, #fa6732 100%);
-
-backgrounddd:rgba(0,0,0,0.7);
+backgroundd: linear-gradient(to bottom, #662d91 0%, #fa6732 100%);
+background: linear-gradient(to bottom, #3639e3 0%, #18195c 100%);
+background-colorr:#3639e3;
 
 }
 
@@ -118,6 +118,11 @@ backgrounddd:rgba(0,0,0,0.7);
   padding: 20px;
   margin: 0;
   width:auto;
+
+  font-weight:600;
+  margin:10px;
+  border:1px solid #fff;
+  border-radius:15px;
   }
 .sidebar > li {
   list-style: none;
@@ -127,12 +132,39 @@ backgrounddd:rgba(0,0,0,0.7);
   text-decoration: none;
   color:#fff;
 }
+.sidebar h3{
+color:#fff;
+}
 .close-sidebar {
   font-size: 1.5em;
   padding-left: 5px;
   color:#fff;
   font-weight:bold;
 }
+
+.sidebar2 {
+  padding: 20px;
+  width:auto;
+  font-weight:600;
+  margin:10px;
+  border:1px solid #fff;
+  border-radius:15px;
+  }
+.sidebar2 > li {
+  list-style: none;
+  margin-bottom:10px;
+}
+.sidebar2 a {
+  text-decoration: none;
+  color:#fff;
+}
+.sidebar a:hover{
+color:#ab2020;
+}
+.sidebar2 a:hover{
+color:#ab2020;
+}
+
 
 
 .footer1{
@@ -190,7 +222,21 @@ sesame chutney recipe in marathi</title>
 </header>
 
 <amp-sidebar id="sidebar1" layout="nodisplay" side="left">
-<div role="button" aria-label="close sidebar" on="tap:sidebar1.toggle" tabindex="0" class="close-sidebar">✕</div> <ul class="sidebar"> <li><a href="https://marathibana.online/contact.html">Contact me</a></li> <li><a href="https://marathibana.online/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathibana.online/privacy.html">Privacy Policy</a></li> </ul> </amp-sidebar>
+<div role="button" aria-label="close sidebar" on="tap:sidebar1.toggle" tabindex="0" class="close-sidebar">✕</div> <ul class="sidebar"> 
+
+<h3>Category</h3>
+<hr/>
+<li><a href="https://marathibana.online/contact.html">Contact me</a></li> <li><a href="https://marathibana.online/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathibana.online/privacy.html">Privacy Policy</a></li> </ul>
+
+
+<ul class=sidebar2>
+<li><a href="#">Home</a></li>
+<li><a href="#">About</a></li>
+<li><a href="#">Privacy</a></li>
+</ul>
+
+
+ </amp-sidebar>
 
     
 <div style="margin-top:20px;background-color:#fff;">
@@ -328,36 +374,21 @@ sesame chutney recipe in marathi</title>
   <script type="application/json">
     [
       {
-        "title": "amp-img",
-        "image": "https://preview.amp.dev/static/samples/img/amp.jpg",
-        "url": "https://marathibana.online"
+        "title": "Search,View and Download Digital 7/12 Utara | शोधा आणि डाऊनलोड करा डिजिटल सातबारा उतारा
+",
+        "image": "https://marathibana.online/img/7-12-utara1.png",
+        "url": "https://marathibana.online/2021/04/09/searchview-and-download-digital-7-12-utara.html"
       },
       {
-        "title": "amp-bind",
-        "image": "https://preview.amp.dev/static/samples/img/amp.jpg",
-        "url": "https://marathibana.online/post/p/about-us.html"
-      },
-      {
-        "title": "amp-accordion",
-        "image": "https://preview.amp.dev/static/samples/img/amp.jpg",
-        "url": "https://marathibana.online/contact.html"
-      },
-      {
-        "title": "amp-lightbox-gallery",
-        "image": "https://preview.amp.dev/static/samples/img/amp.jpg",
-        "url": "https://marathibana.online/terms.html"
-      },
-      {
-        "title": "amp-list",
-        "image": "https://preview.amp.dev/static/samples/img/amp.jpg",
-        "url": "https://marathibana.online"
+        "title": "How to Register Yono SBI app guide in Marathi",
+        "image": "https://marathibana.online/img/yono-sbi1.jpeg",
+        "url": "https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html"
       }
     ]
   </script>
   <div class="amp-next-page-sample-separator" separator>
     amp-next-page separator
   </div>
-
 
 <div footer>
 <div class="footer1">
