--- a/amp/how-to-register-yono-sbi-app-guide-in-marathi.html
+++ b/amp/how-to-register-yono-sbi-app-guide-in-marathi.html
@@ -343,6 +343,10 @@ color:#fff;
 
 <p>यापुर्वी 7/12 utara सातबारा उतारा हवा असल्यास आपल्याला तलाठी कार्यालयात जावे लागत असे, पण आता महाराष्ट्र सरकारने यासाठी ऑनलाईन पध्दतीने 7/12 utara सातबारा उपलब्ध करून देण्याची सेवा सुरू केली आहे. यासाठी महाराष्ट्र सरकारने दोन वेब पोर्टल सुरू केले आहे ज्याचे नाव "महाराष्ट्र भुमी-अभिलेख" व "डिजिटल सातबारा" असे आहे. तर आता आपण बघूया की महाराष्ट्र भुमी-अभिलेख" व "डिजिटल सातबारा या दोन्ही पोर्टलमधे काय फरक आहे.</p>
 
+<!-- amp ad unit -->
+<amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-2567389909188460" data-ad-slot="1935372938" data-auto-format="rspv" data-full-width=""> <div overflow=""></div> </amp-ad>
+
+
 <p>
 गुगलवर जर तुम्ही "7/12 online Maharashtra" असा सर्च केलात तर सर्वात वरती पहिल्या दोन वेगवेगळ्या वेबसाईट मिळतील.
 </p>
@@ -363,6 +367,18 @@ website :</a>
 
 शासकीय व कायदेशीर बाबींसाठी 7/12 utara सातबारा उतारा, 8अ हवा असल्यास या वेबसाइटवरून डाऊनलोड करावा. कारण, या वेबसाइटवरून डाऊनलोड केलेल्या 7/12 utara सातबारा उताऱ्यावर डिजिटल स्वाक्षरी असते. त्यामुळे या वेबसाइटवरून डाऊनलोड केलेला 7/12 utara सातबारा उतारा,8अ कोणत्याही शासकीय व कायदेशीर बाबींसाठी वापरता येतो.
 </p>
+
+
+
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2567389909188460"
+     data-ad-slot="9005453400"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
 <p>
 त्यासाठी या वेबसाईटवर रजिस्ट्रेशन करावे लागते. एकदा रजिस्ट्रेशन झाले कि तुमच्या खात्यात बॅलन्स जमा करावा लागतो. पैसे जमा झाले की तुम्ही 7/12 व 8अ डाऊनलोड करा, या वेबसाइटवरील अकाउंटमधून आपोआप पैसे कमी होतील. [ माझा अनुभव = मी वेबसाईटवर माझ्या खात्यात 30 रुपये जमा केले. जेव्हा 7/12 डाऊनलोड करायचा होता तेव्हा 15रुपये चार्ज होईल असा पॉप-अप येतो. ओके केले असता आपला 7/12 PDF स्वरूपात डाऊनलोड होतो आणि 15 रुपये खात्यातून कमी झाले. शिल्लक 15₹ ]
 </p>
@@ -388,10 +404,14 @@ website :</a>
 <br/>
 <!-- post thumbnail end -->
 
-<!-- amp ad unit -->
-<amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-2567389909188460" data-ad-slot="1935372938" data-auto-format="rspv" data-full-width=""> <div overflow=""></div> </amp-ad>
-
-
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2567389909188460"
+     data-ad-slot="5257780084"
+     data-auto-format="mcrspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
 
 
 </br>
