--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@ border-radiusssss:15px;
 <div role="button" aria-label="close sidebar" on="tap:sidebar1.toggle" tabindex="0" class="close-sidebar">✕</div> <ul class="sidebar">
 <h3>Category</h3>
 <hr/>
- <li><a href="https://rakshak53.github.io/contact.html">Contact me</a></li> <li><a href="https://rakshak53.github.io/disclaimer.html">Disclaimer</a></li> <li><a href="https://rakshak53.github.io/privacy.html">Privacy Policy</a></li> <li><a href="https://marathibana.online/stories/nature-of-kokan.html">Stories</a></li> </ul>
+ <li><a href="https://marathibana.online/post/p/contact.html">Contact me</a></li> <li><a href="https://marathibana.online/post/p/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathibana.online/post/p/privacy.html">Privacy Policy</a></li> <li><a href="https://marathibana.online/stories/nature-of-kokan.html">Stories</a></li> </ul>
 
-<ul class=sidebar2>
+<!-- ul class=sidebar2>
 <li><a href="#">Home</a></li>
 <li><a href="#">About</a></li>
 <li><a href="#">Privacy</a></li>
-</ul>
+</ul -->
 
  </amp-sidebar>
 
@@ -304,11 +304,11 @@ border-radiusssss:15px;
 <div class="footer1">
 
 <div>
-<a class="footer-link" href="https://rakshak53.github.io/about.html">ABOUT US</a>
-<a class="footer-link" href="https://rakshak53.github.io/disclaimer.html">DISCLAIMER</a>
-<a class="footer-link" href="https://rakshak53.github.io/privacy.html">PRIVACY POLICY</a>
-<a class="footer-link" href="https://rakshak53.github.io/terms.html">TERMS AND CONDITIONS</a>
-<a class="footer-link" href="https://rakshak53.github.io">HOME</a>
+<a class="footer-link" href="https://marathibana.online/post/p/about-us.html">ABOUT US</a>
+<a class="footer-link" href="https://marathibana.online/post/p/disclaimer.html">DISCLAIMER</a>
+<a class="footer-link" href="https://marathibana.online/post/p/privacy.html">PRIVACY POLICY</a>
+<a class="footer-link" href="https://marathibana.online/post/p/terms.html">TERMS AND CONDITIONS</a>
+<a class="footer-link" href="https://marathibana.online/">HOME</a>
 
 
 </div>
