--- a/sesame-chutney-recipe-in-marathi.html
+++ b/sesame-chutney-recipe-in-marathi.html
@@ -226,14 +226,14 @@ sesame chutney recipe in marathi</title>
 
 <h3>Category</h3>
 <hr/>
-<li><a href="https://marathibana.online/contact.html">Contact me</a></li> <li><a href="https://marathibana.online/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathibana.online/privacy.html">Privacy Policy</a></li> </ul>
+<li><a href="https://marathibana.online/post/p/contact.html">Contact me</a></li> <li><a href="https://marathibana.online/post/p/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathibana.online/post/p/privacy.html">Privacy Policy</a></li> </ul>
 
 
-<ul class=sidebar2>
+<!-- ul class=sidebar2>
 <li><a href="#">Home</a></li>
 <li><a href="#">About</a></li>
 <li><a href="#">Privacy</a></li>
-</ul>
+</ul -->
 
 
  </amp-sidebar>
@@ -394,9 +394,9 @@ sesame chutney recipe in marathi</title>
 <div class="footer1">
 <div>
 <a class="footer-link" href="https://marathibana.online/post/p/about-us.html">ABOUT US</a>
-<a class="footer-link" href="https://marathibana.online/disclaimer.html">DISCLAIMER</a>
-<a class="footer-link" href="https://marathibana.online/privacy.html">PRIVACY POLICY</a>
-<a class="footer-link" href="https://marathibana.online/terms.html">TERMS AND CONDITIONS</a>
+<a class="footer-link" href="https://marathibana.online/post/p/disclaimer.html">DISCLAIMER</a>
+<a class="footer-link" href="https://marathibana.online/post/p/privacy.html">PRIVACY POLICY</a>
+<a class="footer-link" href="https://marathibana.online/post/p/terms.html">TERMS AND CONDITIONS</a>
 <a class="footer-link" href="https://marathibana.online">HOME</a>
 
 
