--- a/amp/gudi-padwa-2022.html
+++ b/amp/gudi-padwa-2022.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-    <meta name="description" content="How to Register Yono SBI app guide in Marathi ">
+    <meta name="description" content="Gudi Padwa 2022 : यंदा कोणत्या दिवशी साजरा होणार गुढीपाडवा‌ आणि त्याचे महत्त्व ">
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <!-- Import other AMP Extensions here -->
