--- a/amp/how-to-register-yono-sbi-app-guide-in-marathi.html
+++ b/amp/how-to-register-yono-sbi-app-guide-in-marathi.html
@@ -253,9 +253,9 @@ color:#fff;
 <ul class="sidebar">
 <h3>Category</h3>
 <hr/>
-<li><a href="https://marathibana.online/contact.html">Contact me</a></li>
-<li><a href="https://marathibana.online/disclaimer.html">Disclaimer</a></li>
-<li><a href="https://marathibana.online/privacy.html">Privacy Policy</a>
+<li><a href="https://marathibana.online/post/p/contact.html">Contact me</a></li>
+<li><a href="https://marathibana.online/post/p/disclaimer.html">Disclaimer</a></li>
+<li><a href="https://marathibana.online/post/p/privacy.html">Privacy Policy</a>
 </li> 
 </ul>
 
@@ -471,9 +471,9 @@ website :</a>
 <div class="footer1">
 <div>
 <a class="footer-link" href="https://marathibana.online/post/p/about-us.html">ABOUT US</a>
-<a class="footer-link" href="https://marathibana.online/disclaimer.html">DISCLAIMER</a>
-<a class="footer-link" href="https://marathibana.online/privacy.html">PRIVACY POLICY</a>
-<a class="footer-link" href="https://marathibana.online/terms.html">TERMS AND CONDITIONS</a>
+<a class="footer-link" href="https://marathibana.online/post/p/disclaimer.html">DISCLAIMER</a>
+<a class="footer-link" href="https://marathibana.online/post/p/privacy.html">PRIVACY POLICY</a>
+<a class="footer-link" href="https://marathibana.online/post/p/terms.html">TERMS AND CONDITIONS</a>
 <a class="footer-link" href="https://marathibana.online">HOME</a>
 
 
