--- a/stories/motivational-quotes-marathi-sea.html
+++ b/stories/motivational-quotes-marathi-sea.html
@@ -9,6 +9,8 @@
       src="https://cdn.ampproject.org/v0/amp-story-1.0.js"
     ></script>
 <script async custom-element="amp-story-auto-analytics" src="https://cdn.ampproject.org/v0/amp-story-auto-analytics-0.1.js"></script>
+<script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
+
     <title>motivational quotes marathi sea</title>
     <link rel="canonical" href="https://marathibana.online/stories/motivational-quotes-marathi-sea.html" />
     <meta
@@ -143,8 +145,7 @@
             width="900"
             height="1600"
             alt="sea"
-            animate-in="fade-in"
-            animateee-in="whoosh-in-right"
+            animate-in="whoosh-in-right"
           >
           </amp-img>
         </amp-story-grid-layer>
