--- a/amp/okinawa-okhi-90-launch-india.html
+++ b/amp/okinawa-okhi-90-launch-india.html
@@ -316,11 +316,11 @@ color:#fff;
 </li> 
 </ul>
 
-<ul class=sidebar2>
+<!--   ul class=sidebar2>
 <li><a href="#">Home</a></li>
 <li><a href="#">About</a></li>
 <li><a href="#">Privacy</a></li>
-</ul>
+</ul    -->
 
 
 
@@ -435,8 +435,6 @@ Okinawa Okhi 90 इलेक्ट्रिक स्कूटर लाल, प
 
 <div class="tags-container">
 <b>Tags :</b><br/>
-<span class="aa">
-gudi padwa 2022 </span>
 
 <span class="aa">okinawa okhi 90  </span>
 <span class="aa">okinawa okhi 90 e-scooter  </span>
@@ -495,15 +493,15 @@ gudi padwa 2022 </span>
   <script type="application/json">
     [
       {
-        "title": "Search,View and Download Digital 7/12 Utara | शोधा आणि डाऊनलोड करा डिजिटल सातबारा उतारा
+        "title": "SBI मध्ये तुमचेही खाते असेल तर ही बातमी वाचाच… ग्राहकांसाठी खुशखबर!
 ",
-        "image": "https://marathitrends.in/img/7-12-utara1.png",
-        "url": "https://marathitrends.in/2021/04/09/searchview-and-download-digital-7-12-utara.html"
+        "image": "https://marathitrends.in/img/sbi.jpeg",
+        "url": "https://marathitrends.in/amp/sbi-new-tollfree-banking-number-launch.html"
       },
       {
-        "title": "Sesame chatne recipe in Marathi",
-        "image": "https://marathitrends.in/img/marathibana-recipe3.png",
-        "url": "https://marathitrends.in/sesame-chutney-recipe-in-marathi.html"
+        "title": "SBI मध्ये तुमचेही खाते असेल तर ही बातमी वाचाच… ग्राहकांसाठी खुशखबर!",
+        "image": "https://marathitrends.in/img/sbi.jpeg",
+        "url": "https://marathitrends.in/amp/sbi-new-tollfree-banking-number-launch.html"
       }
     ]
   </script>
