--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="marathi website">
+
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://marathitrends.in/logo/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="https://marathitrends.in/logo/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="https://marathitrends.in/logo/android-chrome-512x512.png">
+
+
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://marathitrends.in" />
     <meta property="og:image" content="https://marathitrends.in/MARATHITRENDS.jpg" />
