--- a/amp/gudi-padwa-hindu-festival-2022.html
+++ b/amp/gudi-padwa-hindu-festival-2022.html
@@ -9,6 +9,13 @@
     <meta name="description" content="गुढीपाडव्याच्या दिवसांपासून चैत्र मासारंभ सुरू होते. चैत्र मास हा हिंदू दिनदर्शिकेतील पहिला महिना असतो. यावर्षी म्हणजेच 2022 पासून शके 1944 हिंदू वर्षाची सुरुवात होते आहे.">
 
     <link rel="manifest" href="https://marathitrends.in/manifest.json">
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://marathitrends.in/logo/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="https://marathitrends.in/logo/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="https://marathitrends.in/logo/android-chrome-512x512.png">
 
     
 <!--  og meta tags -->
