--- a/amp/okinawa-okhi-90-launch-india.html
+++ b/amp/okinawa-okhi-90-launch-india.html
@@ -9,6 +9,13 @@
     <meta name="description" content="भारतीय इलेक्ट्रीक दुचाकी स्कूटर उत्पादक कंपनी Okinawa Autotech ने भारतात नवीन इलेक्ट्रिक स्कूटर- Okhi 90 लॉन्च केली आहे.Okhi 90 मध्ये विविध व्यावहारिक वैशिष्ट्ये आहेत जी लोकांना आवडतील तसेच स्कुटरच्या विक्रीमध्ये प्रभावी ठरतील.">
 
     <link rel="manifest" href="https://marathitrends.in/manifest.json">
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://marathitrends.in/logo/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="https://marathitrends.in/logo/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="https://marathitrends.in/logo/android-chrome-512x512.png">
 
     
 <!--  og meta tags -->
