--- a/amp/whatsapp-new-file-sharing-limit-2gb.html
+++ b/amp/whatsapp-new-file-sharing-limit-2gb.html
@@ -9,6 +9,13 @@
     <meta name="description" content="मेटाच्या मालकीचे असलेल्या whatsapp ने, एका नवीन वैशिष्ट्यावर काम करायला सुरुवात केली आहे. या नवीन वैशिष्ट्यामुळे वापरकर्त्यांना त्यांच्या whatsapp वरून इतरांसह 2GB पर्यंतच्या मोठ्या फाइल्स आणि मीडिया सामायिक करण्यास अनुमती देईल.">
 
     <link rel="manifest" href="https://marathitrends.in/manifest.json">
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://marathitrends.in/logo/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="https://marathitrends.in/logo/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="https://marathitrends.in/logo/android-chrome-512x512.png">
 
     
 <!--  og meta tags -->
