--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="marathi website">
-    
+    <meta name="description" content="Marathi WebSite">
+    <meta name="theme-color" content="#3367D6">
     <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://marathitrends.in/logo/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
@@ -165,7 +165,7 @@ font-weight:bold;
 background-color:#fff;
 margin:10px;
 padding:10px;
-border-radius:15px;
+border-radius:0px;
 height:auto;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
