--- a/stories/motivational-quotes-marathi-sea.html
+++ b/stories/motivational-quotes-marathi-sea.html
@@ -12,7 +12,7 @@
 <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
 
     <title>motivational quotes marathi sea</title>
-    <link rel="canonical" href="https://marathibana.online/stories/motivational-quotes-marathi-sea.html" />
+    <link rel="canonical" href="https://marathitrends.in/stories/motivational-quotes-marathi-sea.html" />
     <meta
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
@@ -110,10 +110,10 @@
       standalone
       title="Nature of Kokan"
       publisher="Marathibana"
-      publisher-logo-src="https://marathibana.online/assets/logo2.jpg"
-      poster-portrait-src="https://marathibana.online/assets/sea.jpg"
+      publisher-logo-src="https://marathitrends.in/assets/logo2.jpg"
+      poster-portrait-src="https://marathitrends.in/assets/sea.jpg"
     >
-<amp-story-auto-analytics gtag-id="UA-178406997-2"></amp-story-auto-analytics>
+<amp-story-auto-analytics gtag-id="UA-178406997-7"></amp-story-auto-analytics>
 
 
 
@@ -122,9 +122,9 @@
         <amp-story-grid-layer template="fill">
           <amp-video autoplay loop
                 width="720" height="1280"
-                poster="https://marathibana.online/assets/sea.jpg"
+                poster="https://marathitrends.in/assets/sea.jpg"
                 layout="responsive">
-              <source src="https://marathibana.online/assets/sea.mp4" type="video/mp4">
+              <source src="https://marathitrends.in/assets/sea.mp4" type="video/mp4">
           </amp-video>
         </amp-story-grid-layer>
 
@@ -141,7 +141,7 @@
       <amp-story-page id="my-first-page">
         <amp-story-grid-layer template="fill">
           <amp-img animate-in="fly-in-bottom"
-            src="https://marathibana.online/assets/sea4.jpg"
+            src="https://marathitrends.in/assets/sea4.jpg"
             width="900"
             height="1600"
             alt="sea"
@@ -159,7 +159,7 @@
       <amp-story-page id="my-second-page">
         <amp-story-grid-layer template="fill">
           <amp-img
-            src="https://marathibana.online/assets/sea5.jpg"
+            src="https://marathitrends.in/assets/sea5.jpg"
             width="900"
             height="1600"
             alt="sea2"
