--- a/stories/nature-of-kokan.html
+++ b/stories/nature-of-kokan.html
@@ -10,7 +10,7 @@
     ></script>
 <script async custom-element="amp-story-auto-analytics" src="https://cdn.ampproject.org/v0/amp-story-auto-analytics-0.1.js"></script>
     <title>Nature of kokan</title>
-    <link rel="canonical" href="https://marathibana.online/stories/nature-of-kokan.html" />
+    <link rel="canonical" href="https://marathitrends.in/stories/nature-of-kokan.html" />
     <meta
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
@@ -79,15 +79,15 @@
       standalone
       title="Nature of Kokan"
       publisher="Marathibana"
-      publisher-logo-src="https://marathibana.online/assets/logo2.jpg"
-      poster-portrait-src="https://marathibana.online/assets/sea.jpg"
+      publisher-logo-src="https://marathitrends.in/assets/logo2.jpg"
+      poster-portrait-src="https://marathitrends.in/assets/sea.jpg"
     >
-<amp-story-auto-analytics gtag-id="UA-178406997-2"></amp-story-auto-analytics>
+<amp-story-auto-analytics gtag-id="UA-178406997-7"></amp-story-auto-analytics>
 
       <amp-story-page id="my-first-page">
         <amp-story-grid-layer template="fill">
           <amp-img
-            src="https://marathibana.online/assets/sea1.jpg"
+            src="https://marathitrends.in/assets/sea1.jpg"
             width="900"
             height="1600"
             alt=""
@@ -105,7 +105,7 @@
       <amp-story-page id="my-second-page">
         <amp-story-grid-layer template="fill">
           <amp-img
-            src="https://marathibana.online/assets/sea2.jpg"
+            src="https://marathitrends.in/assets/sea2.jpg"
             width="900"
             height="1600"
             alt=""
