--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@ border-radiusssss:15px;
 <div role="button" aria-label="close sidebar" on="tap:sidebar1.toggle" tabindex="0" class="close-sidebar">✕</div> <ul class="sidebar">
 <h3>Category</h3>
 <hr/>
- <li><a href="https://marathitrends.in/post/p/contact.html">Contact me</a></li> <li><a href="https://marathitrends.in/post/p/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathitrends.in/post/p/privacy.html">Privacy Policy</a></li> </ul>
+ <li><a href="https://marathitrends.in/post/p/contact.html">Contact me</a></li> <li><a href="https://marathitrends.in/post/p/disclaimer.html">Disclaimer</a></li> <li><a href="https://marathitrends.in/post/p/privacy.html">Privacy Policy</a></li>
+
+<li><a href="https://marathitrends.in/stories/web-stories.html">Stories</a></li> </ul>
 
 <!-- ul class=sidebar2>
 <li><a href="#">Home</a></li>
