--- a/amp/expensive-whale-vomit-and-happening-crimes.html
+++ b/amp/expensive-whale-vomit-and-happening-crimes.html
@@ -156,6 +156,11 @@ color:#4d4d4d;
 line-height:32px;
 font-size:20px;
 }
+.paragraph{
+color:#4d4d4d;
+line-height:32px;
+font-size:20px;
+}
 .h4-italic{
 font-style:italic;
 }
@@ -428,16 +433,19 @@ Why is whale vomit so valuable? And why is it sold so expensive? | 'व्हे
 व्हेल माशाची उलटी/ उत्सर्जन इतके मौल्यवान आहे की त्याला तरंगणारे सोने असे संबोधले जाते. पोलिसांनी दिलेल्या ताज्या अंदाजानुसार 1 किलो अंबरग्रीसची आंतरराष्ट्रीय बाजारात एक कोटी रुपये किंमत आहे. त्याच्या उच्च किंमतीचे कारण म्हणजे परफ्यूम मार्केटमध्ये त्याचा वापर, विशेषत: कस्तुरीसारखे सुगंध तयार करण्यासाठी. परफ्यूमची मोठी बाजारपेठ असलेल्या दुबईसारख्या देशांमध्ये याला जास्त मागणी असल्याचे मानले जाते. प्राचीन इजिप्शियन लोक ते धूप म्हणून वापरत. हे काही पारंपारिक औषधांमध्ये देखील वापरले जाते असे मानले जाते.</p>
 
 
-<p>
-<p class="h3-title">एम्बरग्रीसवर कायदे का आहेत?</p>
-
-
+<p class="paragraph">
+<span class="h3-title">एम्बरग्रीसच्या विक्रीवर बंदी का आहेत?</span>
+<br/>
+वन्यजीव संरक्षण कायदा, १९७२ ने व्हेल मासा संरक्षित आहे.<br/>
+स्पर्म व्हेल ही संरक्षित प्रजाती असल्याने, व्हेलची शिकार करण्यास परवानगी नाही.<br/>
 
 एम्बरग्रीसच्या उच्च मूल्यामुळे, एम्बरग्रीस विशेषतः किनारपट्टीच्या भागात तस्करांचे लक्ष्य बनले आहे. अशा तस्करीसाठी गुजरातच्या किनारपट्टीचा वापर केल्याची अनेक प्रकरणे समोर आली आहेत. स्पर्म व्हेल ही संरक्षित प्रजाती असल्याने, व्हेलची शिकार करण्यास परवानगी नाही. तथापि, तस्करांनी माशांच्या पोटातून मौल्यवान अंबरग्रीस मिळविण्यासाठी बेकायदेशीरपणे माशांना लक्ष्य केल्याची माहिती समोर आलेली आहे.
+</p>
 
+<p>
 रायगड जिल्ह्यातील अलीकडची कोणती प्रकरणे होती जिथे अंबरग्रीस जप्त करण्यात आला आणि अटक करण्यात आली?
-3 एप्रिलला रविवारी पेण पोलिसांनी जवळपास अंदाजे 2 किलो एम्बरग्रीस जप्त केला आहे. पेण येथील सरकारी हॉस्पिटलच्या परिसरात संशयित इन्होवा क्रिस्टा गाडीतून अंदाजे दोन कोटींच्या व्हेल माशाच्या उलटीची विक्री करताना पेण पोलिसांनी पाच जणांकडून 2 किलो एम्बरग्रीस जप्त करण्यात आले.
-
+3 एप्रिलला रविवारी पेण पोलिसांनी जवळपास अंदाजे 2 किलो एम्बरग्रीस जप्त केला आहे. पेण येथील सरकारी हॉस्पिटलच्या परिसरात संशयित इन्होवा क्रिस्टा गाडीतून अंदाजे दोन कोटींच्या व्हेल माशाच्या उलटीची विक्री करताना पेण पोलिसांनी पाच जणांकडून 2 किलो एम्बरग्रीस जप्त करण्यात आले.</p>
+<p>
 दुसऱ्या प्रकरणात, काशिद येथे जानेवारी महिन्यात तिघांना अटक करण्यात आली आणि पोलिसांना तिघांकडून 5 किलो व्हेल माशाची उलटी सापडली. दोन्ही प्रकरणांमध्ये पोलीस खरेदीदारांचा शोध घेण्याचा प्रयत्न करत आहेत.
 
 
