--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Marathi WebSite">
     <meta name="theme-color" content="#3639e3">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
+    <link rel="canonical" href="https://marathitrends.in">
+    <title>मराठी ट्रेंड्स.इन</title>
+    <link rel="manifest" href="https://marathitrends.in/manifest.json">
     <link rel="icon" type="image/png" sizes="16x16" href="https://marathitrends.in/logo/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://marathitrends.in/logo/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
-    <link rel="icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
     <link rel="icon" sizes="192x192" href="https://marathitrends.in/logo/android-chrome-192x192.png">
     <link rel="icon" sizes="512x512" href="https://marathitrends.in/logo/android-chrome-512x512.png">
-
-    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://marathitrends.in" />
     <meta property="og:image" content="https://marathitrends.in/MARATHITRENDS.jpg" />
     <meta property="og:description" 
   content="Home Page" />
-    <meta property="og:locale" content="mr_IN" />
-    <meta property="og:locale:alternate" content="en_IN" />
-    <meta property="og:site_name" content="MarathiTrends" />
+    <meta property="og:site_name" content="मराठी ट्रेंड्स.इन" />
 
 <!--  og meta tags -->
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
@@ -166,6 +164,10 @@ border-radius:0px;
 height:auto;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.post-thumbnail a:hover{
+color:#3367D6;
+}
+
 .post-thumbnail-title{
 text-decoration:none;
 color:#3d3d3d;
@@ -185,9 +187,7 @@ border-radiusssss:15px;
     </style>
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
-    <link rel="canonical" href="https://marathitrends.in">
-    <title>MARATHITRENDS</title>
-    <link rel="manifest" href="https://marathitrends.in/manifest.json">
+   
   </head>
 
   <body>
