--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "url": "https://www.marathitrends.in/",
+    "url": "https://www.marathitrends.in",
     "name": "मराठी ट्रेंड्स ",
-    "alternateName": "MarathiTrends "
+    "alternateName": "MarathiTrends ",
+    "logo": {
+          "@type": "ImageObject",
+          "url": "https://marathitrends.in/logo/logo.png"
+        }
     }
-
+      
   </script>
 
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
