--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ background-color:#046bb5;
 color:white;
 }
 .headerbar a:hover{
-color:#0f6639;
+color:maroon;
 }
 
 .home-button {
@@ -153,7 +153,7 @@ color:#fff;
 }
 
 .sidebar a:hover{
-color:#0f6639;
+color:maroon;
 }
 
 .footer1{
@@ -176,6 +176,9 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .post-thumbnail h2{
 margin-bottom:10px;
+}
+.post-thumbnail a:hover{
+color:maroon;
 }
 
 .date{
