--- a/amp/template.html
+++ b/amp/template.html
@@ -3,7 +3,7 @@
   <head>
     
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="amp template for posts">
     <meta name="theme-color" content="#00508a">
     <meta name="msapplication-navbutton-color" content="#00508a">
