--- a/amp/template.html
+++ b/amp/template.html
@@ -488,7 +488,8 @@ website :</a>
 
 <div class="tags-container">
 <p><b>Tags :</b></p>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App</a>
+
+<p><a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App</a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">Yono SBI app guide </a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI app Yono register </a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App registration guide</a>
@@ -497,12 +498,15 @@ website :</a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI App</a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">Yono App</a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI App</a>
-
+</p>
 
 </div>
 
 <!-- Facebook comment -->
 <div>
+<hr/>
+<p> Write a Comment on this post</p>
+<hr/>
 
 <amp-facebook-comments
   width="486"
@@ -513,6 +517,7 @@ website :</a>
 >
 </amp-facebook-comments>
 
+<p><hr/></p>
 </div>
 <!-- Facebook comment end -->
 
