--- a/amp/template.html
+++ b/amp/template.html
@@ -222,7 +222,7 @@ color:#fff;
 color:#fff;
 }
 
-
+/* table of contents */
 .table1{
 background-color:#f2f2f2;height:300px;border:1px solid #e2e2e2;padding:20px;
 }
@@ -250,7 +250,7 @@ margin-top:20px;
 }
 .post a{
 text-decoration:none;
-font-style:italic;
+fontt-style:italic;
 color:#00508a;
 font-size:23px;
 font-weight:500;
@@ -379,7 +379,7 @@ display:none;
  </amp-sidebar>
 
     
-<div style="margin-top:50px;">
+<div style="margin-top:0px;">
 </div>
 
 <!-- floating from here -->
@@ -424,11 +424,10 @@ display:none;
 </div>
 
 
-<hr/>
    <!-- share menu -->
 <div class="social-share">
 <h4>SHARE ON</h4>
-<amp-social-share class="share-icon" type="email" width="40" height="40" aria-label="Share by email"></amp-social-share>
+<amp-social-share class="share-icon" type="telegram" width="40" height="40"  aria-label="Share on Telegram"></amp-social-share>
 
 <amp-social-share class="share-icon" type="facebook" width="40" height="40"  aria-label="Share on Facebook" data-param-app_id="254325784911610"></amp-social-share>
 
@@ -437,6 +436,8 @@ display:none;
 <amp-social-share class="share-icon" type="whatsapp" width="40" height="40"  aria-label="Share on WhatsApp"></amp-social-share>
 
 <amp-social-share class="share-icon" type="system" width="40" height="40"  aria-label="Share"></amp-social-share>
+
+<amp-social-share class="share-icon" type="email" width="40" height="40" aria-label="Share by email"></amp-social-share>
 
 
 </div>
@@ -519,13 +520,7 @@ website :</a>
 
 <p><a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App</a>
 <a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">Yono SBI app guide </a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI app Yono register </a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App registration guide</a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI Yono App guide</a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">Yono SBI App Register </a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI App</a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">Yono App</a>
-<a href="https://marathibana.online/amp/how-to-register-yono-sbi-app-guide-in-marathi.html" class="tag">SBI App</a>
+
 </p>
 
 </div>
