--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
 
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
-<script async custom-element="amp-web-push" src="https://cdn.ampproject.org/v0/amp-web-push-0.1.js"></script>
-
 
     <style amp-custom>
     /* Add your styles here */
@@ -307,15 +305,6 @@ display:none;
 
   <body>
 
-<amp-web-push
-  id="amp-web-push"
-  layout="nodisplay"
-  helper-iframe-url="https://marathitrends.in/helper-frame.html"
-  permission-dialog-url="https://marathitrends.in/permission-dialog.html"
-  service-worker-url="https://marathitrends.in/sw.js"
->
-</amp-web-push>
-
 <!-- auto ads rakshak -->
 
 <header class="headerbar">
@@ -334,10 +323,10 @@ display:none;
 <ul class=sidebar>
 <h3>Category</h3>
 <hr/>
-<li><a href="https://marathitrends.in/tag/essay.html">निबंध</a></li>
-<li><a href="https://marathitrends.in/tag/recipe.html">पाककृती</a></li>
-<li><a href="https://marathitrends.in/tag/banking.html">Banking</a></li>
-<li><a href="https://marathitrends.in/tag/blogger.html">Blogging</a></li>
+<li><a href="https://marathitrends.in/category/essay.html">निबंध</a></li>
+<li><a href="https://marathitrends.in/category/recipe.html">पाककृती</a></li>
+<li><a href="https://marathitrends.in/category/banking.html">Banking</a></li>
+<li><a href="https://marathitrends.in/category/blogger.html">Blogging</a></li>
 <li><a href="https://marathitrends.in/stories/web-stories-list.html">Web Stories</a></li>
 </ul>
 
@@ -564,33 +553,6 @@ src="https://marathitrends.in/img/how-to-setup-custom-domail/setup-custom-domain
 <br/>
 <!-- post thumbnail end -->
 <br/>
-
-
-
-<div class="right-side-container">
-<!-- A subscription widget -->
-<amp-web-push-widget
-  visibility="unsubscribed"
-  layout="fixed"
-  width="250"
-  height="80"
->
-  <button on="tap:amp-web-push.subscribe">Subscribe to Notifications</button>
-</amp-web-push-widget>
-
-<!-- An unsubscription widget -->
-<amp-web-push-widget
-  visibility="subscribed"
-  layout="fixed"
-  width="250"
-  height="80"
->
-  <button on="tap:amp-web-push.unsubscribe">
-    Unsubscribe from Notifications
-  </button>
-</amp-web-push-widget>
-</div>
-
 
 
 
