--- a/amp/how-to-setup-custom-domain-in-blogger.html
+++ b/amp/how-to-setup-custom-domain-in-blogger.html
@@ -2,7 +2,7 @@
 <html ⚡ lang="en-us">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="theme-color" content="#00508a">
     <meta name="msapplication-navbutton-color" content="#00508a">
     <meta name="apple-mobile-web-app-status-bar-style" content="#00508a">
@@ -306,6 +306,7 @@ height:auto;
 @media only screen and (min-width: 600px) {
   .container{
     display: flex;
+    margin:20px;
   }
   .left-side{
    width:70%;
@@ -346,9 +347,10 @@ display:none;
 <ul class=sidebar>
 <h3>Category</h3>
 <hr/>
-<li><a href="https://marathitrends.in/tag/essay.html">निबंध</a></li>
-<li><a href="https://marathitrends.in/tag/recipe.html">पाककृती</a></li>
-<li><a href="https://marathitrends.in/tag/blogger.html">Blogging</a></li>
+<li><a href="https://marathitrends.in/category/essay.html">निबंध</a></li>
+<li><a href="https://marathitrends.in/category/recipe.html">पाककृती</a></li>
+<li><a href="https://marathitrends.in/category/banking.html">Banking</a></li>
+<li><a href="https://marathitrends.in/category/blogger.html">Blogging</a></li>
 <li><a href="https://marathitrends.in/stories/web-stories-list.html">Web Stories</a></li>
 </ul>
 
@@ -386,7 +388,7 @@ display:none;
 <h4>SHARE ON</h4>
 <amp-social-share class="share-icon" type="email" width="40" height="40" aria-label="Share by email"></amp-social-share>
 
-<amp-social-share class="share-icon" type="facebook" width="40" height="40"  aria-label="Share on Facebook" data-param-app_id="254325784911610"></amp-social-share>
+<amp-social-share class="share-icon" type="facebook" width="40" height="40"  aria-label="Share on Facebook" data-param-app_id="13638611610195"></amp-social-share>
 
 <amp-social-share class="share-icon" type="twitter" width="40" height="40"  aria-label="Share on Twitter"></amp-social-share>
 
