--- a/amp/template.html
+++ b/amp/template.html
@@ -386,10 +386,10 @@ text-align:center;
 <ul class=sidebar>
 <h3>Category</h3>
 <hr/>
-<li><a href="https://marathitrends.in/tag/essay.html">निबंध</a></li>
-<li><a href="https://marathitrends.in/tag/recipe.html">पाककृती</a></li>
-<li><a href="https://marathitrends.in/tag/banking.html">Banking</a></li>
-<li><a href="https://marathitrends.in/tag/blogger.html">Blogging</a></li>
+<li><a href="https://marathitrends.in/category/essay.html">निबंध</a></li>
+<li><a href="https://marathitrends.in/category/recipe.html">पाककृती</a></li>
+<li><a href="https://marathitrends.in/category/banking.html">Banking</a></li>
+<li><a href="https://marathitrends.in/category/blogger.html">Blogging</a></li>
 <li><a href="https://marathitrends.in/stories/web-stories-list.html">Web Stories</a></li>
 </ul>
 
@@ -504,7 +504,8 @@ text-align:center;
 
 
 
-
+<code> sudo apt-get update 
+</code>
 <p>
 गुगलवर जर तुम्ही "7/12 online Maharashtra" असा सर्च केलात तर सर्वात वरती पहिल्या दोन वेगवेगळ्या वेबसाईट मिळतील.
 </p>
