--- a/amp/template.html
+++ b/amp/template.html
@@ -17,6 +17,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://marathitrends.in/logo/apple-touch-icon.png">
     <link rel="icon" sizes="192x192" href="https://marathitrends.in/logo/android-chrome-192x192.png">
     <link rel="icon" sizes="512x512" href="https://marathitrends.in/logo/android-chrome-512x512.png">
+    <meta name="msvalidate.01" content="B8F524E0DEC63E0042C06B5931F2CBA4" />
+
 
     <meta property="og:url" content="https://marathitrends.in/amp/template.html" />
     <meta property="og:title" content="template for posts amp" />
@@ -390,6 +392,7 @@ text-align:center;
 <li><a href="https://marathitrends.in/category/recipe.html">पाककृती</a></li>
 <li><a href="https://marathitrends.in/category/banking.html">Banking</a></li>
 <li><a href="https://marathitrends.in/category/blogger.html">Blogging</a></li>
+<li><a href="https://marathitrends.in/category/telecom.html">Telecom</a></li>
 <li><a href="https://marathitrends.in/stories/web-stories-list.html">Web Stories</a></li>
 </ul>
 
