--- a/amp/template.html
+++ b/amp/template.html
@@ -119,7 +119,9 @@
 
     <style amp-custom>
     /* Add your styles here */
-*{margin:0;
+*{
+box-sizing: border-box;
+margin:0;
 padding:0;
 font-family: 'Laila', sans-serif;
 }
